test-cases/final-dump/generic_resources_param_errors.wybe
resource (?t, ?t) list_of:list(?t, ?v)


def get_default(in:?i, ?out:?i) use !list_of(?i, ?i) {
    if { [?val | ?list_of ] = list_of ::
        ?out = val
       | otherwise :: 
        ?out = in
       } 
}

def foo(!ls:list(?i), val:?i, ?out:?i) use !io {
    ?list_of = ls
    use list_of(?i, ?t) in {
        !get_default(val, ?out)
        ?ls = list_of
    }
}
